--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -79,3 +79,5 @@ obj-$(CONFIG_QTI_XR_SMRTVWR_MISC) += qxr-stdalonevwr.o
 obj-$(CONFIG_FPR_FPC)		+= fpr_FingerprintCard/
 obj-$(CONFIG_MOTOR_DRV8846)		+= drv8846.o
 obj-$(CONFIG_HALL_AKM09970)		+= akm09970.o
+
+obj-y				+= lyb_taskmmu.o
