--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -97,7 +97,7 @@ config KPROFILES
 
 config AUTO_KPROFILES_MSM_DRM
 	bool "Enable auto kprofiles for msm drm notifier"
-	depends on KPROFILES && DRM_MSM
+	depends on KPROFILES
 	default n
 	help
 	  Select this to enable automatic kprofiles switching via msm_drm_notifier API,
