ci: Added apollo support
Signed-off-by: NotZeetaa <rodrigo2005contente@gmail.com>

--- a/.ci.yml
+++ b/.ci.yml
@@ -13,4 +13,4 @@ steps:
      chat_id:
        from_secret: chat_id
    commands:
-     - bash .circleci/build.sh && bash .circleci/build2.sh
+     - bash .circleci/build.sh && bash .circleci/build2.sh && bash .circleci/build3.sh
